nouvelle structure compte implémenter, ajout de copi

--- a/option.html
+++ b/option.html
@@ -35,12 +35,15 @@
 				<option value="subject">sujet</option>
 				<option value="author">de</option>
 				<option value="recipients">pour</option>
-				<option value="tags">étiquette</option>
+				<option value="ccList">copie à</option>
 			</select> 
 			<select class="selectCondition">
 				<option value="contient">contient</option>
 				<option value="contientPas">ne contient pas</option>
+				<option value="commence">commence par</option>
+				<option value="fini">finit par</option>
 				<option value="est">est</option>
+				<option value="estPas">n'est pas</option>
 			</select> 
 			<input type="text"/> <button class="supCondi" > supprimer </button> 
 		</div>
