--- a/option.html
+++ b/option.html
@@ -5,6 +5,7 @@
 		<link href="option.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
+		
 		<div id="divSave">
 			<select id="selectAcount"></select>
 			<button id="save">save</button>
@@ -25,9 +26,18 @@
 			<input type="checkbox" checked class="isAnd" /> Toutue les conditions doivent être vrai.<br/>
 			<div class="listCondi"></div>
 			<div class="ajouter">⨁</div>
-			<input type="text" class="dest" placeholder="destination" />
 			<div class="supFiltre">❌</div>
+			<div class="divDest">
+				<input type="text" class="dest" readonly="readonly" placeholder="Destination" />
+				<input type="text" class="destReelle" style="display:none" />
+				<div class="explorer"></div>
+				<button class="parcourir">Parcourir</button>
+				<button class="valideFolder">Valider</button>
+			</div>
+			
 		</div>
+			
+
 		
 		<!-- LIGNE CONDI -->
 		<div id="sourceLineCondi" style="display:none">
@@ -47,6 +57,8 @@
 			</select> 
 			<input type="text"/> <button class="supCondi" > supprimer </button> 
 		</div>
+		
+		<script src="explorer.js"></script>
 		<script src="options.js"></script>
 	</body>
 </html>
