FIX bug commencer par et bub sauve garde

--- a/option.html
+++ b/option.html
@@ -5,11 +5,11 @@
 		<link href="option.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		
 		<div id="divSave">
 			<select id="selectAcount"></select>
 			<button id="save">save</button>
 		</div>
+		
 		<div id="filtres">
 		</div>
 
@@ -26,7 +26,6 @@
 			<input type="checkbox" checked class="isAnd" /> Toutue les conditions doivent être vrai.<br/>
 			<div class="listCondi"></div>
 			<div class="ajouter">⨁</div>
-			<div class="supFiltre">❌</div>
 			<div class="divDest">
 				<input type="text" class="dest" readonly="readonly" placeholder="Destination" />
 				<input type="text" class="destReelle" style="display:none" />
@@ -34,6 +33,9 @@
 				<button class="parcourir">Parcourir</button>
 				<button class="valideFolder">Valider</button>
 			</div>
+			<div class="supFiltre">❌</div>
+			<div class="depli">﹀</div>
+			<div class="repli">︿</div>
 			
 		</div>
 			
