--- a/option.html
+++ b/option.html
@@ -23,9 +23,15 @@
 		<!-- FILTRE -->
 		<div id="sourceFiltre" style="display:none">
 			<div class="titreFiltre"></div>
-			<input type="checkbox" checked class="isAnd" /> Toutue les conditions doivent être vrai.<br/>
+			<div class="etOu"><input type="checkbox" checked class="isAnd" /> Toutue les conditions doivent être vrai.</div>
 			<div class="listCondi"></div>
 			<div class="ajouter">⨁</div>
+			
+			<div class="supFiltre">❌</div>
+			<div class="depli">˅</div>
+			<div class="repli">˄</div>
+			
+			
 			<div class="divDest">
 				<input type="text" class="dest" readonly="readonly" placeholder="Destination" />
 				<input type="text" class="destReelle" style="display:none" />
@@ -33,9 +39,7 @@
 				<button class="parcourir">Parcourir</button>
 				<button class="valideFolder">Valider</button>
 			</div>
-			<div class="supFiltre">❌</div>
-			<div class="depli">﹀</div>
-			<div class="repli">︿</div>
+
 			
 		</div>
 			
