--- a/option.html
+++ b/option.html
@@ -22,14 +22,17 @@
 		
 		<!-- FILTRE -->
 		<div id="sourceFiltre" style="display:none">
-			<div class="titreFiltre"></div>
+			<div class="headerFiltre">
+				<div class="depli">˅</div>
+				<div class="repli">˄</div>
+				<div class="titreFiltre"></div>
+			</div>
 			<div class="etOu"><input type="checkbox" checked class="isAnd" /> Toutue les conditions doivent être vrai.</div>
 			<div class="listCondi"></div>
 			<div class="ajouter">⨁</div>
 			
 			<div class="supFiltre">❌</div>
-			<div class="depli">˅</div>
-			<div class="repli">˄</div>
+
 			
 			
 			<div class="divDest">
