checkbox, ajout filtre, explorer 1 - correction du bug de la check box 2 - ajout des filtre a la première position 3 - bouton ajout filtre en haut 4 - modif cosmetique explorer ATTENTION fonction openExplorerAt ne marche pas

--- a/option.html
+++ b/option.html
@@ -7,6 +7,7 @@
 	<body>
 		<div id="divSave">
 			<select id="selectAcount"></select>
+			<button id="ajout_filtre">Ajouter filtre</button>
 			<button id="save">save</button>
 		</div>
 		
@@ -14,9 +15,9 @@
 		</div>
 
 		<!-- <button >ajout filtre</button> -->
-		<div id="ajout_filtre">
-			<button>Ajouter filtre</button>
-		</div>
+
+			
+
 		
 		<!-- source element to build filter -->
 		
