Ajout bare de recherche

--- a/option.html
+++ b/option.html
@@ -9,6 +9,9 @@
 			<select id="selectAcount"></select>
 			<button id="ajout_filtre">Ajouter filtre</button>
 			<button id="save">save</button>
+			<br>
+			<br>
+			<input type="text" placeholder="Rechercher un filtre" id="recherche"/>
 		</div>
 		
 		<div id="filtres">
