retrait alert et prompt suit MAJ ajout d'un input pour les titres

--- a/option.html
+++ b/option.html
@@ -38,7 +38,7 @@
 				<div class="repli">˄</div>
 				<div class="titreFiltre"></div>
 			</div>
-			<div class="etOu"><input type="checkbox" checked class="isAnd" /> Toutue les conditions doivent être vrai.</div>
+			<div class="etOu"><input type="checkbox" class="isAnd" /> Toutue les conditions doivent être vrai.</div>
 			<div class="listCondi"></div>
 			<div class="ajouter">⨁</div>
 			
@@ -72,7 +72,7 @@
 				<option value="est">est</option>
 				<option value="estPas">n'est pas</option>
 			</select> 
-			<input type="text"/> <button class="supCondi" > supprimer </button> 
+			<input class="inputLineCondi" type="text"/> <button class="supCondi" > supprimer </button> 
 		</div>
 		
 		<script src="explorer.js"></script>
